# NLP

./: HODI_2023_test_GOLD_taskA_PROMPT.jsonl  NLPChallenge.ipynb  requirements.txt
Ex/: LLMs_Finetuning - Copy.ipynb  LLMs_Finetuning_DPO.ipynb  LLMs_Finetuning_with_chat_template.ipynb  NLP - Lab - Gensim.ipynb  NLP - Lab - Text categorization with word embeddings.ipynb  NLP Lab - Spacy - Word Embeddings.ipynb  NLP_Lab_Text_categorization_with_Deep_Learning.ipynb  SpacePinocchioEx.ipynb  SpacyExample.ipynb  SpacyTextExample.ipynb  bow_moby_dick.mm  bow_moby_dick.mm.index  ex1.ipynb  ex2.ipynb  ex3.ipynb  ex4.ipynb  ex5.ipynb  moby_dick.dict  moby_dick.txt  moby_dick_2000.txt  rdflib-lab-lemmas.csv  rdflib_lab.ipynb
Exam/: .gitattributes  .gitignore  LLMs_Finetuning_Copy.ipynb  LLMs_Inference_and_Prompting.ipynb  cipv.ipynb  dataset_clean_with_personality_tags.csv  filtered_dataset.csv  generated_dataset.csv  generated_dataset2.csv  non_toxic_generation.py  script3.py
exam/: .gitignore  main.py  pyproject.toml
tweets_itapol/: tweets_1662817574_0  tweets_1662817574_10  tweets_1662817574_102  tweets_1662817574_103  tweets_1662817574_104  tweets_1662817574_105  tweets_1662817574_106  tweets_1662817574_11  tweets_1662817574_17  tweets_1662817574_18  tweets_1662817574_19  tweets_1662817574_23  tweets_1662817574_30  tweets_1662817574_31  tweets_1662817574_40  tweets_1662817574_44  tweets_1662817574_45  tweets_1662817574_49  tweets_1662817574_50  tweets_1662817574_51  tweets_1662817574_53  tweets_1662817574_55  tweets_1662817574_56  tweets_1662817574_58  tweets_1662817574_6  (+18 more)
(+106 files in other folders)
