[project]
name = "exam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "datasets>=3.6.0",
    "optimum>=1.25.0",
    "peft>=0.15.2",
    "pip>=25.1.1",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "trl>=0.15.2",
    "unsloth>=2025.5.3",
]
